--- a/modules/clustering/CMakeLists.txt
+++ b/modules/clustering/CMakeLists.txt
@@ -1,10 +1,11 @@
 find_package(CUDA REQUIRED)
 
+set(CMAKE_CUDA_ARCHITECTURES 52)
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --expt-extended-lambda")
 
 add_library(clustering_module 
     YOLOHelper.cu
-    kMeans.cpp
+    kMeans.cu
 )
 
 target_include_directories(clustering_module PUBLIC
