--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,9 @@ enable_testing()
 find_package(GTest REQUIRED)
 find_package(CUDA REQUIRED)
 
+set(CMAKE_CUDA_ARCHITECTURES 52)
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --expt-extended-lambda")
+
 add_executable(runTests
     testUtils.cpp
     segmentationTests.cpp
