add TridimensionalReconstructor first draft

--- a/modules/vision/CMakeLists.txt
+++ b/modules/vision/CMakeLists.txt
@@ -1,6 +1,21 @@
 add_library(vision_module 
     calibration.cpp
     homography.cpp
+    tridimensionalReconstruction.cu
+)
+
+find_package(CUDA REQUIRED)
+
+set(CMAKE_CUDA_ARCHITECTURES 52)
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --expt-extended-lambda")
+
+
+include_directories(
+    ${CUDA_INCLUDE_DIRS}
+)
+
+link_directories(
+    ${CUDA_LIBRARY_DIRS}
 )
 
 target_include_directories(vision_module PUBLIC
